--- a/index.html
+++ b/index.html
@@ -176,8 +176,17 @@
         <!-- Project Card: cFix -->
         <article class="group relative w-full rounded-2xl transition-all duration-500 overflow-hidden bg-slate-100">
           <div class="relative w-full aspect-[4/3] md:aspect-[16/9] overflow-hidden transition-all duration-500">
-            <img src="imagess/dp12.jpeg" alt="cFix website screenshot"
-              class="absolute inset-0 w-full h-full object-cover z-5">
+            <!-- <img src="imagess/dp12.jpeg" alt="cFix website screenshot"
+              class="absolute inset-0 w-full h-full object-cover z-5"> -->
+            <div class="absolute inset-0 w-full h-full z-5">
+              <img id="cfix-img-a" src="./imagess/web1.png"
+                class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-100 opacity-100" />
+
+              <img id="cfix-img-b" src="./imagess/web1.png"
+                class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-0 opacity-100" />
+            </div>
+
+
             <div class="absolute inset-0 z-20 p-8 md:p-12 flex flex-col justify-between">
               <div class="flex justify-between items-start">
                 <h3 class="text-3xl md:text-4xl font-bold tracking-tight text-slate-900">cFIX</h3>
@@ -203,9 +212,10 @@
               </div>
             </div>
 
-            <div
-              class="absolute inset-0 z-10 transition-transform duration-700 group-hover:scale-105 bg-gradient-to-br from-slate-200 to-slate-300">
+            <div class="absolute inset-0 z-10 transition-transform duration-700 group-hover:scale-105 pointer-events-none
+            bg-gradient-to-br from-black/20 via-transparent to-transparent">
             </div>
+
           </div>
 
           <!-- Expandable Details -->
@@ -380,9 +390,10 @@
               </div>
             </div>
 
-            <div
-              class="absolute inset-0 z-10 transition-transform duration-700 group-hover:scale-105 bg-gradient-to-br from-slate-200 to-slate-300">
+            <div class="absolute inset-0 z-10 transition-transform duration-700 group-hover:scale-105 pointer-events-none
+            bg-gradient-to-br from-black/20 via-transparent to-transparent">
             </div>
+
           </div>
 
           <!-- Expandable Details -->
@@ -523,52 +534,6 @@
               Gallery</a>
           </div>
         </div>
-
-        <!-- Bento Grid -->
-        <!-- <div class="grid grid-cols-2 md:grid-cols-4 md:grid-rows-2 gap-4 h-[600px] md:h-[500px]">
-          <div class="col-span-2 row-span-2 bg-slate-900 rounded-2xl overflow-hidden relative group border border-slate-800 hover:border-slate-600 transition-all">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent z-10"></div>
-            <div class="absolute inset-0 flex items-center justify-center">
-              <!-- Camera icon -->
-        <!-- <svg class="w-16 h-16 text-slate-700 group-hover:text-blue-500 opacity-50 group-hover:opacity-100"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-            d="M3 7h2l2-3h6l2 3h2a2 2 0 012 2v9a2 2 0 01-2 2H3a2 2 0 01-2-2V9a2 2 0 012-2z" />
-          <circle cx="12" cy="13" r="3" />
-        </svg> -->
-        <!-- </div>
-      <div class="absolute bottom-6 left-6 z-20">
-        <span class="text-xs font-bold text-blue-400 uppercase tracking-wider mb-1 block">Cinematography</span>
-        <h4 class="text-2xl font-bold text-white">Urban Silence Reel</h4>
-      </div>
-      </div> -->
-
-        <!-- <div
-        class="col-span-1 row-span-1 bg-slate-800 rounded-2xl overflow-hidden relative group border border-slate-700 hover:border-slate-500 transition-all">
-        <img src="imagess/mosq.png" alt="Portrait" class="w-full h-full object-cover">
-        <div class="absolute bottom-4 left-4 z-20 opacity-0 group-hover:opacity-100 transition-opacity">
-          <h4 class="text-sm font-bold text-white">Portraits</h4>
-        </div>
-      </div> -->
-
-        <!-- <div
-        class="col-span-1 row-span-1 bg-slate-800 rounded-2xl overflow-hidden relative group border border-slate-700 hover:border-slate-500 transition-all">
-        <div class="absolute inset-0 flex items-center justify-center text-slate-600">Experiments</div>
-        <div class="absolute bottom-4 left-4 z-20 opacity-0 group-hover:opacity-100 transition-opacity">
-          <h4 class="text-sm font-bold text-white">3D Renders</h4>
-        </div>
-      </div> -->
-
-        <!-- <div class="col-span-2 row-span-1 bg-slate-900 rounded-2xl overflow-hidden relative group border border-slate-800 hover:border-slate-600 transition-all">
-            <div class="absolute inset-0 flex items-center justify-center text-slate-700">
-              <!-- Code icon -->
-        <!-- <svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M16 18l6-6-6-6M8 6L2 12l6 6"/></svg>
-            </div> -->
-        <!-- <div class="absolute bottom-4 left-6 z-20">
-              <h4 class="text-lg font-bold text-white">Code & Motion</h4>
-            </div> -->
-        <!-- </div> -->
-        <!-- </div> -->
 
 
 
@@ -763,6 +728,94 @@
       });
     }
 
+
+
+    (function () {
+      // Use explicit relative paths (relative to the HTML file)
+      const imgs = [
+        "./imagess/web1.png",
+        "./imagess/web2.png",
+        "./imagess/web3.png",
+        "./imagess/web4.png",
+        "./imagess/web5.png",
+        "./imagess/web6.png",
+        "./imagess/web7.png",
+        "./imagess/web8.png"
+      ];
+
+      const intervalMs = 2800;    // 2 seconds per slide
+      const fadeDuration = 700;   // matches tailwind duration-700
+
+      const imgA = document.getElementById('cfix-img-a');
+      const imgB = document.getElementById('cfix-img-b');
+      if (!imgA || !imgB) {
+        console.error('cfix slideshow elements not found');
+        return;
+      }
+
+      // Preload images and attach error handlers
+      imgs.forEach((src, i) => {
+        const p = new Image();
+        p.onload = () => console.log(`preloaded: ${src}`);
+        p.onerror = () => console.error(`failed to preload: ${src}`);
+        p.src = src;
+      });
+
+      let curIndex = 0;
+      let showingA = true;
+      let timer = null;
+      let paused = false;
+
+      function showNext() {
+        const nextIndex = (curIndex + 1) % imgs.length;
+        const nextSrc = imgs[nextIndex];
+
+        const target = showingA ? imgB : imgA;
+        const visible = showingA ? imgA : imgB;
+
+        target.src = nextSrc;
+        target.alt = `cFix screenshot ${nextIndex + 1}`;
+
+        // force reflow then crossfade
+        target.offsetHeight;
+        target.style.opacity = '1';
+        visible.style.opacity = '0';
+
+        setTimeout(() => {
+          showingA = !showingA;
+          curIndex = nextIndex;
+        }, fadeDuration);
+      }
+
+      function start() {
+        if (timer) clearInterval(timer);
+        timer = setInterval(() => {
+          if (!paused && document.visibilityState === 'visible') {
+            showNext();
+          }
+        }, intervalMs);
+      }
+
+      // Pause when tab not visible
+      document.addEventListener('visibilitychange', () => {
+        paused = document.visibilityState !== 'visible';
+      });
+
+      // init: make sure both have a valid src
+      imgA.src = imgs[0];
+      imgB.src = imgs[0];   // IMPORTANT: avoid empty src
+      imgA.style.opacity = '1';
+      imgB.style.opacity = '0';
+      curIndex = 0;
+      showingA = true;
+
+      start();
+
+      // debug helper: check current srcs
+      console.log('cfix init: imgA=', imgA.src, ' imgB=', imgB.src);
+      window._cfixSlideshow = { start, stop: () => clearInterval(timer) };
+
+    })();
     // Simple: close details when clicking outside (optional)
     document.addEventListener('click', (e) => {
       const openSection = document.querySelector('section[id$="-details"]:not(.hidden)');
